@@ -1,3 +1,8 @@
+2007-11-19  Marco Barisione  <marco@barisione.org>
+
+	* glib/gregex.c: When the compilation of a pattern fails in the error
+	message use the character offset and not the byte offset.
+
 2007-11-19 10:30:33  Tim Janik  <timj@imendio.com>
 
 	* configure.in: updated version number to 2.15.0 for development.
